--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,20 @@
 			<artifactId>google-api-client-jackson2</artifactId>
 			<version>1.20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<!--<scope>runtime</scope>-->
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<!--<dependency>
+			<groupId>com.googlecode.libphonenumber</groupId>
+			<artifactId>libphonenumber</artifactId>
+			<version>8.4.3</version>
+		</dependency>-->
 	</dependencies>
 	<build>
 		<plugins>
